--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 body{
   font-family: 'Open Sans Condensed';
+
+  /* background-repeat: no-repeat;
+  background-size: auto; */
+  padding: 20px 60px; 
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
+* {
+  box-sizing: border-box;
 }
